[package]
name = "jmt-blake3"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>", "Diem Association <opensource@diem.com>", "shuimuliang <shuimuliang@gmail.com>"]
description = "Jellyfish Merkle Tree based on BLAKE3 hash function"
repository = "https://github.com/shuimuliang/jellyfish-merkle-tree-blake3.git"
homepage = "https://eclipse.io"
license = "Apache-2.0"
publish = true
edition = "2018"

[features]
default = ["ics23-blake3"]

[dependencies]
ics23-blake3 = { version = "0.9.1" , optional = true }
anyhow = "1.0.68"
byteorder = "1.4.3"
itertools = { version = "0.10.5", default-features = false }
mirai-annotations = "1.12.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.0"
proptest = { version = "1.0.0" }
proptest-derive = { version = "0.3.0"}
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
prometheus = "0.13.3"
bcs = "0.1.4"
sha2 = "0.10.6"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
async-recursion = "1.0.0"
hex = "0.4.3"
tracing = "0.1.37"
blake3 = "1.3.3"

[dev-dependencies]
rand = { version = "0.8.5" }
